--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js"
+    "start:prod": "set NODE_ENV=production & nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Shivam Mundhra",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.3.6",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
