--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
@@ -22,6 +23,7 @@
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
+    "pug": "^2.0.4",
     "slugify": "^1.3.6",
     "validator": "^12.1.0",
     "xss-clean": "^0.1.1"
