--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
     "hpp": "^0.2.2",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "pug": "^2.0.4",
+    "sharp": "^0.23.4",
     "slugify": "^1.3.6",
     "validator": "^12.1.0",
     "xss-clean": "^0.1.1"
